<resources>
    <string name="app_name">SmartPay</string>
    <string name="action_settings">Settings</string>
    <string name="locate_shops">Locate Shops</string>
    <string name="history">Bill History</string>
    <string name="currenthistory">Current History</string>
    <string name="search_products">Search Products</string>
    <string name="title_activity_currenthistory">Current History</string>
    <string name="userprofileimage">UserProfileImage</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="_2017">© 2018</string>
    <string name="offer_available">Offer Available</string>
    <string name="remove_item">Remove Item</string>
    <string name="search">Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="eg_soap_book">eg: Soap, Book</string>
    <string name="scanned_item_image">Scanned Item Image</string>
    <string name="cannot_be_empty">Cannot Be Empty</string>
    <string name="pay_now">Pay Now</string>
    <string name="private_key">Private Key</string>
    <string name="sample_wallet_address">asdasjhfjdshfj465454</string>
    <string name="_5350">5350</string>
    <string name="generate_new_private_key">Generate New Private Key</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_address_reader">Wallet Address Reader</string>
    <string name="desc_nfc_tag">Please tap your phone on the NFC Tag to read shop\'s wallet address</string>
    <string name="no_of_items_purchased">%d Items Purchased</string>
    <string name="total_amount">Total Amount = Rs. %f</string>
    <string name="itrm_price">MRP:  ₹ %f/-</string>
    <string name="serial_no">%d.</string>
    <string name="item_qty">Quantity: %d pc</string>
    <string name="item_amount">₹ %f/-</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="switch_to_qr_code_mode">Switch to QR Code Mode</string>

</resources>
