<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".shopping.activity.MainActivity">

    <include
        layout="@layout/content_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/navigationDrawerRootScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="225dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/userprofileimage"
                    android:id="@+id/profileImageViewDrawer"
                    android:src="@drawable/user"
                    app:civ_border_width="0.5dp"
                    app:civ_border_color="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:drawableEnd="@drawable/right_arrow"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:onClick="launchProfile"
                    android:drawableRight="@drawable/right_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/profile" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:drawableEnd="@drawable/right_arrow"
                    android:onClick="launchSettings"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:drawableRight="@drawable/right_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/settings" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:drawableEnd="@drawable/right_arrow"
                    android:onClick="sendFeedBack"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:drawableRight="@drawable/right_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/feedback" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:drawableEnd="@drawable/right_arrow"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:onClick="rateApp"
                    android:drawableRight="@drawable/right_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/rate_app" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:drawableEnd="@drawable/right_arrow"
                    android:drawableRight="@drawable/right_arrow"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:onClick="shareApp"
                    android:gravity="center_vertical"
                    android:text="@string/share_app" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/_2017" />
            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
