<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smartpay.android.activity.MainActivity"
    tools:showIn="@layout/content_home">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:scaleType="fitStart"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/banner"
        android:src="@drawable/lulu"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/divider1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorDivider"
        android:layout_below="@id/banner"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locate_shops"
        android:drawableEnd="@drawable/right_arrow"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:onClick="locateShops"
        android:layout_marginTop="15dp"
        android:id="@+id/locate"
        android:drawableRight="@drawable/right_arrow"
        android:layout_below="@id/divider1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/divider2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorDivider"
        android:layout_below="@id/locate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:drawableEnd="@drawable/right_arrow"
        android:gravity="center_vertical"
        android:onClick="launchHistory"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:id="@+id/history"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/right_arrow"
        android:layout_below="@id/divider2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/divider3"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorDivider"
        android:layout_below="@id/history"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_products"
        android:drawableEnd="@drawable/right_arrow"
        android:gravity="center_vertical"
        android:onClick="searchProducts"
        android:id="@+id/search"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/right_arrow"
        android:layout_below="@id/divider3"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/divider6"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorDivider"
        android:layout_below="@id/search"/>

</RelativeLayout>
